--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,53 @@ body {
   background-color: #ffffff;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
 ul {
+  margin: 0;
+  padding: 0;
   list-style-type: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+address {
+  font-style: normal;
+}
+
+img {
+  display: block;
+}
+
+.container {
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+
+.header {
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
 }
 
 .logo {
@@ -20,6 +65,7 @@ ul {
   color: #4d5ae5;
   text-decoration: none;
 }
+
 .studio {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -33,7 +79,19 @@ ul {
   text-decoration: none;
 }
 
-.nav-item {
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+
+.header-list {
+  display: flex;
+  align-items: center;
+  margin-left: 76px;
+  gap: 40px;
+}
+
+.nav-link {
   font-weight: 500;
   font-size: 16px;
 
@@ -44,13 +102,22 @@ ul {
   text-decoration: none;
 }
 
-.nav-item:hover,
-.nav-item:focus {
+.nav-link:hover,
+.nav-link:focus {
   color: #404bbf;
 }
+
 .contacts {
-  font-style: normal;
+  margin-left: auto;
 }
+
+.contacts-list {
+  font-style: normal;
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
 .address-item {
   font-weight: 400;
   font-size: 16px;
@@ -69,7 +136,17 @@ ul {
 }
 
 .hero {
+  max-width: 1158px;
+  margin: 0 auto;
+  padding: 188px 0px;
   background-color: #2e2f42;
+}
+
+.container-hero {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
 }
 
 .hero-title {
@@ -81,6 +158,9 @@ ul {
   letter-spacing: 0.02em;
   text-align: center;
   color: #ffffff;
+  max-width: 496px;
+  margin-bottom: 48px;
+  display: block;
 }
 
 .button-hero {
@@ -93,6 +173,11 @@ ul {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #ffffff;
+  border-radius: 4px;
+  min-width: 169px;
+  height: 56px;
+  margin: 0 auto;
+  display: block;
 }
 
 .button-hero:hover,
@@ -101,7 +186,20 @@ ul {
   cursor: pointer;
 }
 
-.benefits-title {
+.benesits-section {
+  padding: 120px 0px;
+}
+
+.benefits-list {
+  display: flex;
+  gap: 24px;
+}
+
+.benefits-item {
+  width: calc((100% - 24px * 3) / 4);
+}
+
+.benefits-item-title {
   font-weight: 500;
   font-size: 20px;
 
@@ -109,6 +207,7 @@ ul {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .benefits-text {
@@ -123,6 +222,7 @@ ul {
 
 .our-team {
   background-color: #f4f4fd;
+  padding: 120px 0px;
 }
 
 .our-team-title {
@@ -136,10 +236,21 @@ ul {
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
+  margin-bottom: 72px;
 }
 
 .team-list {
+  display: flex;
+  gap: 24px;
+}
+
+.team-list-item {
   background-color: #ffffff;
+  width: calc((100% - 24px * 3) / 4);
+}
+
+.team-image {
+  margin-bottom: 32px;
 }
 
 .team-name {
@@ -152,6 +263,7 @@ ul {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .team-position {
@@ -164,6 +276,11 @@ ul {
   letter-spacing: 0.02em;
   text-align: center;
   color: #434455;
+  margin-bottom: 32px;
+}
+
+.section-portfolio {
+  padding: 120px 0px;
 }
 
 .title-portfolio {
@@ -177,10 +294,21 @@ ul {
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
+  margin-bottom: 72px;
+}
+
+.portfolio-list {
+  display: flex;
+  gap: 24px;
+  flex-wrap: wrap;
 }
 
 .portfolio-item {
   background-color: #ffffff;
+}
+
+.portfolio-image {
+  margin-bottom: 32px;
 }
 
 .portfolio-item-name {
@@ -191,6 +319,8 @@ ul {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
+  margin-left: 16px;
 }
 
 .portfolio-item-specification {
@@ -201,10 +331,13 @@ ul {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  margin-bottom: 32px;
+  margin-left: 16px;
 }
 
 .footer {
   background-color: #2e2f42;
+  padding: 100px 0px;
 }
 
 .studio-footer {
@@ -227,4 +360,6 @@ ul {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  max-width: 264px;
+  margin-top: 16px;
 }
