--- a/css/styles.css
+++ b/css/styles.css
@@ -24,10 +24,6 @@ ul {
   list-style-type: none;
 }
 
-button {
-  cursor: pointer;
-}
-
 address {
   font-style: normal;
 }
@@ -46,6 +42,7 @@ img {
 .header {
   padding-top: 24px;
   padding-bottom: 24px;
+  border-bottom: 1px solid #e7e9fc;
 }
 
 .header-container {
@@ -77,6 +74,7 @@ img {
   text-transform: uppercase;
   color: #2e2f42;
   text-decoration: none;
+  margin-right: 76px;
 }
 
 .header-nav {
@@ -87,7 +85,6 @@ img {
 .header-list {
   display: flex;
   align-items: center;
-  margin-left: 76px;
   gap: 40px;
 }
 
@@ -135,18 +132,13 @@ img {
   color: #404bbf;
 }
 
+/* <!-- section Benefits --> */
+
 .hero {
   max-width: 1158px;
   margin: 0 auto;
   padding: 188px 0px;
   background-color: #2e2f42;
-}
-
-.container-hero {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-content: center;
 }
 
 .hero-title {
@@ -159,11 +151,11 @@ img {
   text-align: center;
   color: #ffffff;
   max-width: 496px;
+  margin: 0 auto;
   margin-bottom: 48px;
-  display: block;
 }
 
-.button-hero {
+button {
   background-color: #4d5ae5;
   border: none;
   font-weight: 500;
@@ -178,6 +170,7 @@ img {
   height: 56px;
   margin: 0 auto;
   display: block;
+  cursor: pointer;
 }
 
 .button-hero:hover,
@@ -188,6 +181,19 @@ img {
 
 .benesits-section {
   padding: 120px 0px;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .benefits-list {
@@ -220,6 +226,8 @@ img {
   color: #434455;
 }
 
+/* <!-- section Our Team --> */
+
 .our-team {
   background-color: #f4f4fd;
   padding: 120px 0px;
@@ -245,12 +253,13 @@ img {
 }
 
 .team-list-item {
+  border-radius: 0 0 4px 4px;
   background-color: #ffffff;
   width: calc((100% - 24px * 3) / 4);
 }
 
-.team-image {
-  margin-bottom: 32px;
+.team-charakters {
+  padding: 32px 0px;
 }
 
 .team-name {
@@ -276,8 +285,9 @@ img {
   letter-spacing: 0.02em;
   text-align: center;
   color: #434455;
-  margin-bottom: 32px;
 }
+
+/* <!-- section Portfolio --> */
 
 .section-portfolio {
   padding: 120px 0px;
@@ -299,16 +309,21 @@ img {
 
 .portfolio-list {
   display: flex;
-  gap: 24px;
+  column-gap: 24px;
+  row-gap: 48px;
   flex-wrap: wrap;
 }
 
 .portfolio-item {
+  width: calc((100% - 48px) / 3);
   background-color: #ffffff;
 }
 
-.portfolio-image {
-  margin-bottom: 32px;
+.portfolio-charakters {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+  margin-bottom: 8px;
 }
 
 .portfolio-item-name {
@@ -319,8 +334,6 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  margin-bottom: 8px;
-  margin-left: 16px;
 }
 
 .portfolio-item-specification {
@@ -331,13 +344,16 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  margin-bottom: 32px;
-  margin-left: 16px;
 }
 
 .footer {
   background-color: #2e2f42;
   padding: 100px 0px;
+}
+
+.logo-footer {
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 .studio-footer {
@@ -361,5 +377,4 @@ img {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
-  margin-top: 16px;
 }
