--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@ img {
 }
 
 .header {
+  padding: 24px 0;
   border-bottom: 1px solid #e7e9fc;
 }
 
@@ -87,11 +88,6 @@ img {
   display: flex;
   align-items: center;
   gap: 40px;
-}
-
-.nav-item {
-  padding-top: 24px;
-  padding-bottom: 24px;
 }
 
 .nav-item {
