--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ img {
   border-bottom: 1px solid #e7e9fc;
 }
 
-.header-container {
+.header-div {
   display: flex;
   align-items: center;
   padding-top: 24px;
