--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,11 @@ img {
   border-bottom: 1px solid #e7e9fc;
 }
 
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+
 .header-div {
   display: flex;
   align-items: center;
