--- a/css/styles.css
+++ b/css/styles.css
@@ -32,31 +32,6 @@ img {
   display: block;
 }
 
-.container {
-  width: 1158px;
-  margin: 0 auto;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.header {
-  border-bottom: 1px solid #e7e9fc;
-}
-
-.header-nav {
-  display: flex;
-  align-items: center;
-}
-
-.header-div {
-  display: flex;
-  align-items: center;
-}
-
-.logo-header {
-  margin-right: 76px;
-}
-
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -68,8 +43,6 @@ img {
   text-transform: uppercase;
   color: #4d5ae5;
   text-decoration: none;
-  padding-top: 24px;
-  padding-bottom: 24px;
 }
 
 .studio {
@@ -85,10 +58,37 @@ img {
   text-decoration: none;
 }
 
+.container {
+  width: 1158px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.header {
+  border-bottom: 1px solid #e7e9fc;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  padding: 24px 0;
+  margin-right: 76px;
+}
+
 .header-list {
   display: flex;
   align-items: center;
   gap: 40px;
+  padding: 24px 0;
 }
 
 .nav-item {
