--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,13 @@ body {
   background-color: #ffffff;
 }
 
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
 h1,
 h2,
 h3,
@@ -18,51 +25,14 @@ a {
   text-decoration: none;
 }
 
-ul {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-
-address {
-  font-style: normal;
-}
-
 img {
   display: block;
 }
 
-.logo {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-
-  /* line-height: 21px; */
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #4d5ae5;
-  text-decoration: none;
-}
-
-.studio {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-
-  /* line-height: 21px; */
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #2e2f42;
-  text-decoration: none;
-}
-
 .container {
-  width: 1158px;
+  max-width: 1158px;
+  padding: 0 15px;
   margin: 0 auto;
-  padding-left: 15px;
-  padding-right: 15px;
 }
 
 .header {
@@ -80,31 +50,38 @@ img {
 }
 
 .logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+}
+
+.logo-header {
   padding: 24px 0;
   margin-right: 76px;
+}
+
+.logo-header .studio {
+  color: #2e2f42;
 }
 
 .header-list {
   display: flex;
   align-items: center;
   gap: 40px;
-  padding: 24px 0;
 }
 
-.nav-item {
+.nav-link {
+  display: block;
+  padding: 24px 0;
   font-weight: 500;
   font-size: 16px;
-
-  /* line-height: 24px; */
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  text-decoration: none;
-}
-
-.nav-link:hover,
-.nav-link:focus {
-  color: #404bbf;
 }
 
 .contacts {
@@ -130,6 +107,8 @@ img {
   font-style: normal;
 }
 
+.nav-link:hover,
+.nav-link:focus,
 .address-item:hover,
 .address-item:focus {
   color: #404bbf;
